--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,15 @@
 {
   "name": "TimeSheets",
-  "version": "0.0.0",
+  "version": "0.1.0",
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/BjoernKW/TimeSheets"
+  },
   "dependencies": {
     "angular": "~1.0.7",
     "json3": "~3.2.4",
     "jquery": "~1.9.1",
-    "bootstrap-sass": "~2.3.1",
+    "bootstrap": "~3.0.0",
     "es5-shim": "~2.0.8",
     "angular-resource": "~1.0.7",
     "angular-cookies": "~1.0.7",
