--- a/bower.json
+++ b/bower.json
@@ -2,8 +2,8 @@
   "name": "TimeSheets",
   "version": "0.1.0",
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/BjoernKW/TimeSheets"
+    "type": "git",
+    "url": "https://github.com/BjoernKW/TimeSheets"
   },
   "dependencies": {
     "angular": "~1.0.7",
@@ -13,7 +13,8 @@
     "es5-shim": "~2.0.8",
     "angular-resource": "~1.0.7",
     "angular-cookies": "~1.0.7",
-    "angular-sanitize": "~1.0.7"
+    "angular-sanitize": "~1.0.7",
+    "angular-translate": "~1.0.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.7",
