--- a/bower.json
+++ b/bower.json
@@ -9,15 +9,19 @@
     "angular": "~1.0.7",
     "json3": "~3.2.4",
     "jquery": "~1.9.1",
-    "bootstrap": "~3.0.0",
     "es5-shim": "~2.0.8",
     "angular-resource": "~1.0.7",
     "angular-cookies": "~1.0.7",
     "angular-sanitize": "~1.0.7",
-    "angular-translate": "~1.0.2"
+    "angular-translate": "~1.0.2",
+    "angular-ui-select2": "latest",
+    "bootstrap": "~3.0.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.7",
     "angular-scenario": "~1.0.7"
+  },
+  "resolutions": {
+    "angular": "1.0.8"
   }
 }
