--- a/bower.json
+++ b/bower.json
@@ -14,8 +14,8 @@
     "angular-cookies": "~1.0.7",
     "angular-sanitize": "~1.0.7",
     "angular-translate": "~1.0.2",
-    "angular-ui-select2": "latest",
-    "bootstrap": "~3.0.0"
+    "bootstrap": "~3.0.0",
+    "angular-ui-select2": "~0.0.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.7",
