--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "angular-sanitize": "~1.0.7",
     "angular-translate": "~1.0.2",
     "bootstrap": "~3.0.0",
-    "angular-ui-select2": "~0.0.2"
+    "angular-ui-select2": "~0.0.2",
+    "Angular-localStorage": "~0.1.5"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.7",
