--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,3 @@
 machine:
   environment:
-    PATH: /home/ubuntu/TimeSheets/vendor/bundle/ruby/2.0.0/gems/compass-0.12.2/bin/:$PATH
+    PATH: /home/ubuntu/TimeSheets/vendor/bundle/ruby/2.0.0/gems/compass-0.12.2/bin/:/home/ubuntu/TimeSheets/vendor/bundle/ruby/2.0.0/gems/sass-3.2.10/bin/:/home/ubuntu/TimeSheets/vendor/bundle/ruby/2.0.0/gems/chunky_png-1.2.8/lib:$PATH
