--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,3 @@
 machine:
   environment:
-    PATH: $PATH:/home/ubuntu/TimeSheets/vendor/bundle/ruby/2.0.0/gems/compass-0.12.2/bin/
+    PATH: /home/ubuntu/TimeSheets/vendor/bundle/ruby/2.0.0/gems/compass-0.12.2/bin/:$PATH
